--- a/css/styles.css
+++ b/css/styles.css
@@ -225,6 +225,17 @@ border-radius: 4px;
     list-style: none;
 }
 
+.container-list-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    margin-bottom: 8px;
+    
+}
+
 .list-item-two {
     width: calc((100% - 72px) / 4);
     list-style: none;
