--- a/css/styles.css
+++ b/css/styles.css
@@ -302,6 +302,7 @@ margin-bottom: 72px;
 }
 .heading-two {
     text-align: center;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .heading-two {
     text-transform: capitalize;}
@@ -309,6 +310,7 @@ margin-bottom: 72px;
     .list-section-four {
         display: flex;
         gap: 24px;
+        
     }
 
 .list-section-three {
