--- a/css/styles.css
+++ b/css/styles.css
@@ -302,7 +302,7 @@ margin-bottom: 72px;
 }
 .heading-two {
     text-align: center;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    
 }
 .heading-two {
     text-transform: capitalize;}
@@ -328,16 +328,41 @@ margin-bottom: 72px;
     justify-content: center;
     gap: 24px;
 }
-.instagram {
+.social-media-blue {
     width: 40px;
+    height: 40px;
 
 }
-.social-media-icon-link {}
+.social-media-icon-list {
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.social-media-icon-list :hover {
+    background-color: #404bbf;
+}
+.social-media-icon-list :focus {
+    background-color: #404bbf; 
+}
+.svg-icon-social-media {
+    fill: #f4f4fd;
+}
+
+
+.social-media-list {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+
+}
 
 .list-one {
     background-color: #FFFFFF;
     width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     list-style: none;
 }
 
