--- a/css/styles.css
+++ b/css/styles.css
@@ -333,27 +333,24 @@ margin-bottom: 72px;
     height: 40px;
 
 }
-.social-media-icon-list {
+.social-media-icon-link {
     background-color: #4d5ae5;
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.social-media-icon-list :hover {
+.social-media-icon-link :hover {
     background-color: #404bbf;
 }
-.social-media-icon-list :focus {
+.social-media-icon-link :focus {
     background-color: #404bbf; 
 }
 .svg-icon-social-media {
     fill: #f4f4fd;
 }
 
-.social-media-icon-link {
-width: 100%; 
- height: 100%;
-}
+
 
 .social-media-list {
     display: flex;
