--- a/css/styles.css
+++ b/css/styles.css
@@ -339,6 +339,8 @@ margin-bottom: 72px;
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    height: 100%;
 }
 .social-media-icon-link :hover {
     background-color: #404bbf;
