--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@
 --title-image-color: var(--NAVY-BLUE, #2E2F42);
 --text-image-color: var(--SLATE, #434455);
 --border-color: var(--CORNFLOWER, #E7E9FC)
+--social-media-icon-link-background-color: var(--#4D5AE5)
 }
 
 * {
