--- a/css/styles.css
+++ b/css/styles.css
@@ -335,7 +335,7 @@ margin-bottom: 72px;
 
 }
 .social-media-icon-link {
-    background-color: #4d5ae5;
+    background-color: var(--#4D5AE5);
     border-radius: 50%;
     display: flex;
     align-items: center;
