--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,8 @@
 --title-image-color: var(--NAVY-BLUE, #2E2F42);
 --text-image-color: var(--SLATE, #434455);
 --border-color: var(--CORNFLOWER, #E7E9FC)
---social-media-icon-link-background-color: var(--#4D5AE5)
+--social-media-icon-link-background: var(--IRIS, #4D5AE5);
+--customer-link-color: var(--#8e8f99);
 }
 
 * {
@@ -335,7 +336,7 @@ margin-bottom: 72px;
 
 }
 .social-media-icon-link {
-    background-color: var(--#4D5AE5);
+    background-color: var(--IRIS);
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -541,4 +542,38 @@ img {
 .list-work {
     width: calc((100% - 48px) / 3);
     list-style: none;
+}
+
+.section-five {
+    padding: 120px 0;
+
+}
+
+.customer-lists {
+    display: flex;
+    gap: 24px;
+
+}
+.customer-list {
+    width: calc((100% - 120px) / 6);
+    height: 88px;
+}
+.customer-link {
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--customer-link-color)
+}
+.customer-link :focus {
+    border-color: #404bbf;
+    color: #404bbf;
+}
+.customer-link :hover {
+    border-color: #404bbf;
+    color: #404bbf;
+}
+.svg-customer-link {
+    fill: currentColor;
 }
