--- a/css/styles.css
+++ b/css/styles.css
@@ -347,6 +347,8 @@ margin-bottom: 72px;
     display: flex;
     align-items: center;
     justify-content: center;
+    width:100%;
+     height:100%;
     
 }
 .social-media-icon-link :hover {
@@ -619,5 +621,5 @@ img {
 }
 .svg-social-media-footer {
     fill: var(--svg-social-media-footer-fill);
-    
+
 }
