--- a/css/styles.css
+++ b/css/styles.css
@@ -342,7 +342,7 @@ margin-bottom: 72px;
 
 }
 .social-media-icon-link {
-    background-color: var(--IRIS);
+    background-color: var(--social-media-icon-link-background);
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -351,12 +351,14 @@ margin-bottom: 72px;
      height:100%;
     
 }
-.social-media-icon-link :hover {
+
+
+
+.social-media-icon-link :active {
     background-color: #404bbf;
 }
-.social-media-icon-link :focus {
-    background-color: #404bbf; 
-}
+
+
 .svg-icon-social-media {
     fill: #f4f4fd;
 }
