--- a/css/styles.css
+++ b/css/styles.css
@@ -14,29 +14,40 @@
     --title-image-color: var(--NAVY-BLUE, #2E2F42);
     --text-image-color: var(--SLATE, #434455);
     --border-color: var(--CORNFLOWER, #E7E9FC);
-    --social-media-icon-link-background: var(--IRIS, #4D5AE5);
-    --customer-link-color: var(--#8e8f99);
-    --p-social-networks-color: var(--#FFFFFF);
-    --svg-social-media-footer-fill: var(--#f4f4fd);
-
+    
 }
 
-* {
+* ,
+*::before
+*::after 
+{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+ul {
+    display: flex;
+}
+.list {
+    list-style: none;
+}
+
+.link {
+    text-decoration: none;
 }
 
 .container {
-    width: 1158px;
-    margin: 0 auto;
-    padding: 0 15px 0 15px;
-    display: flex;
-    align-items: baseline;
-
-   
+   max-width: 1158px;
+   margin: 0 auto;
+   padding: 0 15px 0 15px;
 }
+
 .conheader {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 1158px;
 }
 
 .header {
@@ -44,8 +55,12 @@
     height: 72px;
     flex-shrink: 0;
     border-bottom: 1px solid var(--CORNFLOWER, #E7E9FC);
-background: var(--WHITE, #FFF);
-box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+    background: var(--WHITE, #FFF);
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
 }
 .nav {
     display: flex;
@@ -57,55 +72,37 @@ body {
     font-family: 'Roboto',sans-serif;
     color: #434455;
     background-color: var(--background-body-color);
-
 }
 
 
 .logo {
     color: var(--IRIS, #4D5AE5);
-font-family: "Raleway",sans-serif;
-font-size: 18px;
-font-style: normal;
-font-weight: 800;
-line-height: 1.17; /* 116.667% */
-letter-spacing: 0.03em;
-text-transform: uppercase;
-margin-right: 76px;
-
-
-
+    font-family: "Raleway",sans-serif;
+    font-size: 18px;
+    font-weight: 800;
+    line-height: 1.17; /* 116.667% */
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    margin-right: 76px;
+    text-decoration: none;
 }
 
 .list-menu {
-display: flex;
-gap: 40px;
-padding: 24px 0;
-list-style: none;
-}
-
-.list-address {
-display: flex;
-gap: 40px;
-list-style: none;
-}
-
-.link{
-    text-decoration:none;
-    margin-bottom: 16px;
-    display: inline-block;
+    display: inline-flex;
+    gap: 40px;
+    padding: 24px 0;
+    list-style: none;
+    align-items: flex-start;
     }
 
-    
-
+.list-address {
+    display: flex;
+    gap: 40px;
+    justify-content: space-between;
+}
 
 .span{
     color: var(--NAVY-BLUE, #2E2F42);
-font-family: "Raleway",sans-serif;
-font-size: 18px;
-font-style: normal;
-font-weight: 800;
-line-height: 1.17; /* 116.667% */
-text-transform: uppercase;
 }
 
 .list{
@@ -129,19 +126,13 @@ text-decoration:none;
 padding: 24px 0;
 }
 
-
 .first:hover{
    color: #404bbf
 }
 
-
 .first:focus{
    color: #404bbf
 }
-
-
-
-
 
 .address{
     font-style: normal
@@ -173,76 +164,57 @@ color:#404bbf
     background-size: cover;
     background-image:linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-in-office.jpg);
     max-width: 1440px;
-
-
+    margin: auto;
 }
 
 .heading-one {
     color: var(--WHITE, #FFF);
-    text-align: center;
-    
-    /* Header 1 */
     font-family: 'Roboto';
     font-size: 56px;
     font-style: normal;
     font-weight: 700;
     line-height: 1.07; /* 107.143% */
     letter-spacing: 0.02em;
-    text-align: center;
     max-width: 496px;
+    text-align: center;
+    margin: 0 auto;
 }
 
 .button {
     color: var(--WHITE, #FFF);
-
-/* Button Text */
-font-family: "Roboto",sans-serif;
-font-size: 16px;
-font-style: normal;
-font-weight: 500;
-line-height: 1.5; /* 150% */
-letter-spacing: 0.04em;
-display: block;
-min-width: 169px;
-height: 56px;
-border: none;
-border-radius: 4px;
-
-}
-.button {
+    font-family: inherit;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.5; /* 150% */
+    letter-spacing: 0.04em;
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    border: none;
+    border-radius: 4px;
     cursor: pointer;
-}
-.button { 
+    margin: 0 auto;
+    margin-top: 48px;
     background-color: var(--IRIS, #4D5AE5);
 }
-
-.button:hover {
-    background-color: #404BBF;
-}
+.button:hover,
 .button:focus {
     background-color: #404BBF;
 }
 
 
+
 .section-two {
     padding: 120px 0;
-
+    /* margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center; */
 }
 .list-section-two {
     display: flex;
     gap: 24px; 
-    list-style: none;
-}
-
-.container-list-icon {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 112px;
-    background-color: #f4f4fd;
-    border-radius: 4px;
-    margin-bottom: 8px;
-
 }
 
 .list-item-two {
@@ -251,31 +223,21 @@ border-radius: 4px;
 
 }
 
-
 .heading-three {
     color: var(--NAVY-BLUE, #2E2F42);
-
-/* Header 3 */
-font-family: 'Roboto',sans-serif;
-font-size: 20px;
-font-style: normal;
-font-weight: 500;
-line-height: 1.2; /* 120% */
-letter-spacing: 0.02em;
-margin-bottom: 8px;
-text-align: center;
+    font-family: 'Roboto',sans-serif;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.2; /* 120% */
+    letter-spacing: 0.02em;
+    margin-bottom: 8px;
 }
 
 .p-one{
     color: var(--SLATE, #434455);
-
-/* Body */
-font-family: 'Roboto';
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
-line-height: 1.5; /* 150% */
-letter-spacing: 0.32px;
+    font-size: 16px;
+    line-height: 1.5; /* 150% */
 }
 
 .paragraph {
@@ -283,53 +245,39 @@ letter-spacing: 0.32px;
     letter-spacing: 0.02em;
 }
 
-
 .section-four{
     background-color: #F4F4FD;
     padding: 120px 0;
-
 }
 .section-three {
     padding-bottom: 120px;
-
 }
-
 
 .heading-two {
     color: var(--NAVY-BLUE, #2E2F42);
-
-/* Header 2 */
-font-family: 'Roboto';
-font-size: 36px;
-font-style: normal;
-font-weight: 700;
-line-height: 1.11; /* 111.111% */
-letter-spacing: 0.02em;
-margin-bottom: 72px;
-
-}
-.heading-two {
+    font-family: inherit;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.11; /* 111.111% */
+    letter-spacing: 0.02em;
+    margin-bottom: 72px;
     text-align: center;
-    
+    text-transform: capitalize;
 }
-.heading-two {
-    text-transform: capitalize;}
 
-    .list-section-four {
-        display: flex;
-        gap: 24px;
-        
-    }
+.list-section-four {
+    display: flex;
+    gap: 24px;
+}
 
 .list-section-three {
     display: flex;
     gap: 24px;
-    list-style: none;
+    justify-content: center;
 }
 
 .list-item-three {
     width: calc((100% - 48px) / 3);
-    list-style: none;
 }
 
 .social-media-blue {
@@ -337,6 +285,7 @@ margin-bottom: 72px;
     height: 40px;
 
 }
+
 .social-media-icon-link {
     background-color: var(--social-media-icon-link-background);
     border-radius: 50%;
@@ -344,15 +293,10 @@ margin-bottom: 72px;
     align-items: center;
     justify-content: center;
     width:100%;
-     height:100%;
-    
+     height:100%; 
 }
 
-
-
-.social-media-icon-link:focus {
-    background-color: #404bbf;
-}
+.social-media-icon-link:focus,
 .social-media-icon-link:hover {
     background-color: #404bbf;
 }
@@ -361,14 +305,10 @@ margin-bottom: 72px;
     fill: #f4f4fd;
 }
 
-
-
 .social-media-list {
     display: flex;
     justify-content: center;
     gap: 24px;
-    
-
 }
 
 .list-one {
@@ -380,38 +320,33 @@ margin-bottom: 72px;
 }
 
 .name {
+    text-align: center;
     padding: 32px 0px;
 }
 
 .p-two {
-    color: var(--SLATE, #434455);
-    text-align: center;
-    
-    /* Body */
-    font-family: 'Roboto';
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.5; /* 150% */
-    letter-spacing: 0.02em;
     text-align: center;
 }
 
 
 .logo-footer {
     color: var(--IRIS, #4D5AE5);
-font-family: "Raleway",sans-serif;
-font-size: 18px;
-font-style: normal;
-font-weight: 800;
-line-height: 1.17; /* 116.667% */
-letter-spacing: 0.03em;
-text-transform: uppercase;
-display: inline-block;
+    font-family: "Raleway",sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 1.17; /* 116.667% */
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    display: inline-block;
+    margin-bottom: 16px;
+    height: 24px;
+    align-items: center;
+    flex-shrink: 0;
 }
+
 .footer {
     background: var(--NAVY-BLUE, #2E2F42);
-    padding: 100px 0;
 }
 .span-footer {
     color: #f4f4fd;
@@ -419,15 +354,8 @@ display: inline-block;
 .p-footer {
     color: var(--CLOUD, #F4F4FD);
     max-width: 264px;
-
-/* Body */
-font-family: 'Roboto';
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
-line-height: 1.5; /* 150% */
-letter-spacing: 0.02em;
-display: inline-block;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 }
 
 .button-section {
@@ -446,8 +374,6 @@ display: inline-block;
 .filters-button { 
     color: var(--IRIS, #4D5AE5);
     text-align: center;
-    
-    /* Button Text */
     font-family: "Roboto",sans-serif;
     font-size: 16px;
     font-style: normal;
@@ -461,17 +387,13 @@ display: inline-block;
     border-radius: 4px;
 
 }
-.filters-button:hover{
+.filters-button:hover,
+.filters-button:focus {
     color: #FFFFFF;
     background-color: #404BBF;
     border: 1px solid transparent;
 }
 
-.filters-button:focus{
-    background-color: #404BBF;
-    color: #FFFFFF;
-    border: 1px solid transparent;
-}
 .filters-button:active{
     background-color: #404BBF
 }
@@ -479,14 +401,12 @@ display: inline-block;
 .title-image {
     color: var(--NAVY-BLUE, #2E2F42);
     margin-bottom: 8px;
-
-/* Header 3 */
-font-family: 'Roboto';
-font-size: 20px;
-font-style: normal;
-font-weight: 500;
-line-height: 1.2; /* 120% */
-letter-spacing: 0.4px;
+    font-family: 'Roboto';
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.2; /* 120% */
+    letter-spacing: 0.4px;
 }
 
 .list-image {
@@ -505,15 +425,14 @@ letter-spacing: 0.4px;
  }
 .text-image {
     color: var(--SLATE, #434455);
-
-/* Body */
-font-family: 'Roboto';
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
-line-height: 1.5; /* 150% */
-letter-spacing: 0.32px;
+    font-family: 'Roboto';
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5; /* 150% */
+    letter-spacing: 0.32px;
 }
+
 img {
     display: block;
 }
@@ -575,14 +494,12 @@ img {
     justify-content: center;
     color: var(--customer-link-color)
 }
-.customer-link :focus {
+.customer-link:focus,
+.customer-link:hover {
     border-color: #404bbf;
     color: #404bbf;
 }
-.customer-link :hover {
-    border-color: #404bbf;
-    color: #404bbf;
-}
+
 .svg-customer-link {
     fill: currentColor;
 }
@@ -613,14 +530,11 @@ img {
     align-items: center;
     justify-content: center;
 }
-.social-media-footer-link :focus {
-    background-color: #31d0aa;
-}
-
+.social-media-footer-link :focus,
 .social-media-footer-link :hover {
     background-color: #31d0aa;
 }
+
 .svg-social-media-footer {
     fill: var(--svg-social-media-footer-fill);
-
 }
