--- a/css/styles.css
+++ b/css/styles.css
@@ -538,3 +538,13 @@ img {
 .svg-social-media-footer {
     fill: var(--svg-social-media-footer-fill);
 }
+
+.container-list-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    margin-bottom: 8px;
+}
