--- a/css/styles.css
+++ b/css/styles.css
@@ -486,6 +486,7 @@ img {
 .customer-list {
     width: calc((100% - 120px) / 6);
     height: 88px;
+
 }
 .customer-link {
     border: 1px solid var(#8e8f99);
@@ -552,3 +553,7 @@ img {
     margin-bottom: 8px;
 }
 
+.social-media-blue {
+    width: 40px;
+    height: 40px;
+}
