--- a/css/styles.css
+++ b/css/styles.css
@@ -255,9 +255,7 @@ color:#404bbf
 
 .heading-two {
     color: var(--NAVY-BLUE, #2E2F42);
-    font-family: inherit;
     font-size: 36px;
-    font-weight: 700;
     line-height: 1.11; /* 111.111% */
     letter-spacing: 0.02em;
     margin-bottom: 72px;
@@ -483,12 +481,14 @@ img {
 .customer-list {
     display: flex;
     gap: 24px;
-
 }
-.customer-list {
-    width: calc((100% - 120px) / 6);
-    height: 88px;
 
+.customer-list {
+    height: 88px;
+}
+
+.customers-list {
+    width: calc((100% - 120px) / 6);
 }
 .customer-link {
     border: 1px solid var(#8e8f99);
