--- a/css/styles.css
+++ b/css/styles.css
@@ -255,10 +255,13 @@ color:#404bbf
 
 .heading-two {
     color: var(--NAVY-BLUE, #2E2F42);
+    font-family: 'Roboto' sans-serif;
     font-size: 36px;
+    font-weight: 700;
     line-height: 1.11; /* 111.111% */
     letter-spacing: 0.02em;
     margin-bottom: 72px;
+    margin-top: 240px;
     text-align: center;
     text-transform: capitalize;
 }
