--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404BBF;
+    border-radius: 2px;
 }
 section {
     padding: 120px 0;
@@ -61,7 +68,7 @@ ul {
     /* justify-content: center;
     align-items: center;
     margin: auto; */
-
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08); ;
 }
 .nav {
     display: flex;
@@ -129,6 +136,9 @@ line-height: 1.5; /* 150% */
 letter-spacing: 0.02em;
 text-decoration:none; 
 padding: 24px 0;
+position: relative;
+color: #404bbf;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -159,6 +169,7 @@ font-style: normal;
 font-weight: 400;
 line-height: 1.5; /* 150% */
 letter-spacing: 0.02em;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact:hover {
 color:#404bbf
@@ -170,11 +181,12 @@ color:#404bbf
 .section-first {
     background: var(--NAVY-BLUE, #2E2F42);
     padding: 188px 0;
-    /* background-size: cover;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1.jpg);
+    max-width: 1440px;
     background-repeat: no-repeat;
     background-position: center;
-    max-width: 1440px;
-    margin: auto; */
+    background-size: cover;
+
 }
 
 .heading-one {
@@ -210,6 +222,8 @@ cursor: pointer;
 margin: 0 auto;
 margin-top: 48px;
 background-color: var(--IRIS, #4D5AE5);
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 .button:hover,
 .button:focus {
