--- a/css/styles.css
+++ b/css/styles.css
@@ -548,3 +548,14 @@ color: var(--NAVY-BLUE);
 text-align: center;
 margin-bottom: 8px;
 }
+
+.icon-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #F4F4FD;
+    border-radius: 4px;
+    margin-bottom: 8px;
+    
+}
