--- a/css/styles.css
+++ b/css/styles.css
@@ -16,27 +16,50 @@
 --border-color: var(--CORNFLOWER, #E7E9FC)
 }
 
-* ,
-*::before,
-*::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    width: 100%;
-    position: absolute;
-    left: 0;
-    bottom: -1px;
-    height: 4px;
-    background-color: #404BBF;
-    border-radius: 2px;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin-top: 0;
+    margin-bottom: 0;
 }
+
+
+
+
+
+
 section {
     padding: 120px 0;
 }
 
-ul {
+ul,
+ol {
     display: flex;
+    list-style: none;
+    padding-left: 0;
+    padding-top: 0;
+    margin-bottom: 0;
 }
+
+img {
+    display: block;
+}
+
+button {
+    cursor: pointer;
+    border: none;
+    border-radius: 4px;
+}
+
+a {
+    text-decoration: none;
+}
+
 .list {
     list-style: none;
 }
@@ -186,6 +209,7 @@ color:#404bbf
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    margin: 0 auto;
 
 }
 
@@ -231,7 +255,9 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
-
+.section-two {
+    background-color: var(--p-footer-color);
+}
 
 .list-section-two {
     display: flex;
@@ -290,11 +316,11 @@ text-transform: capitalize;
     display: flex;
     gap: 24px;
     justify-content: center;
-    background: var(--cloud);
+    background: var(--CLOUD);
 }
 
 .section-three {
-    background: var(--cloud);
+    background: var(#F4F4FD);
 }
 
 .list-item-three {
@@ -535,9 +561,8 @@ color: var(--slate);
     border: 1px solid #e7e9fc;
     border-top: none;
     padding: 32px 16px;
-    width: 360px;
-    height: 120px;
 }
+
 .heading-three-name {
     font-family: var(--font-family);
 font-weight: 500;
@@ -559,3 +584,8 @@ margin-bottom: 8px;
     margin-bottom: 8px;
     
 }
+
+.section-four {
+    background-color: var(--p-footer-color);
+}
+
