--- a/css/styles.css
+++ b/css/styles.css
@@ -159,8 +159,6 @@ line-height: 1.5; /* 150% */
 letter-spacing: 0.02em;
 text-decoration:none; 
 padding: 24px 0;
-position: relative;
-color: #404bbf;
 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -589,3 +587,8 @@ margin-bottom: 8px;
     background-color: var(--p-footer-color);
 }
 
+.current {
+    position: relative;
+    color: #404BBF;
+
+}
