--- a/css/styles.css
+++ b/css/styles.css
@@ -332,6 +332,7 @@ text-transform: capitalize;
     width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
     margin-bottom: 8px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     
 }
 
@@ -587,8 +588,45 @@ margin-bottom: 8px;
     background-color: var(--p-footer-color);
 }
 
-.current {
+.current::after {
     position: relative;
     color: #404BBF;
+    content: '';
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
 
+}
+
+.social-media-list {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+
+.social-media {
+    width: 40px;
+    height: 40px;
+}
+
+.social-media-link {
+    width: 100%;
+    height: 100%;
+    background-color: var(--filter-button-color);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.social-media-link:focus:hover {
+    background-color: #404BBF;
+}
+
+.svg {
+    fill: var(--p-footer-color);
 }
