--- a/css/styles.css
+++ b/css/styles.css
@@ -202,7 +202,7 @@ color:#404bbf
 .section-first {
     background: var(--NAVY-BLUE, #2E2F42);
     padding: 188px 0;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(.../images/people-offices.jpg);
     max-width: 1440px;
     background-repeat: no-repeat;
     background-position: center;
