--- a/css/styles.css
+++ b/css/styles.css
@@ -626,4 +626,18 @@ margin-bottom: 8px;
 .svg {
     fill: var(--p-footer-color);
 }
+.list-menu li:first-child a {
+    position: relative;
+    color: #404bbf;
+}
 
+.list-menu li:first-child a::after {
+    content: '';
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+}
