--- a/css/styles.css
+++ b/css/styles.css
@@ -589,6 +589,7 @@ margin-bottom: 8px;
     background-color: #F4F4FD;
     border-radius: 4px;
     margin-bottom: 8px;
+    border: 1px solid #8e8f99;
     
 }
 
