--- a/css/styles.css
+++ b/css/styles.css
@@ -202,12 +202,12 @@ color:#404bbf
 .section-first {
     background: var(--NAVY-BLUE, #2E2F42);
     padding: 188px 0;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(./images/office-meet.jpg);
     max-width: 1440px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     margin: 0 auto;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/office-meet.jpg);
 
 }
 
