--- a/css/styles.css
+++ b/css/styles.css
@@ -642,3 +642,50 @@ margin-bottom: 8px;
     background-color: #404bbf;
     border-radius: 2px;
 }
+
+.footer-container {
+    display: flex;
+    align-items: baseline;
+}
+
+.footer-info {
+    margin-right: 120px;
+}
+
+.p-footer-social-media {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--background-body-color);
+    margin-bottom: 16px;
+}
+
+.footer-list-social-media {
+    display: flex;
+    gap: 16px;
+}
+
+.footer-point-social-media {
+    width: 40px;
+    height: 40px;
+
+}
+
+.footer-reference {
+    width: 100%;
+    height: 100%;
+    background-color: var(--filter-button-color);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+.footer-reference:hover:active{
+    background-color: #31d0aa;
+}
+
+.svg-fotter-social-media {
+    fill: var(--p-footer-color);
+}
