--- a/css/styles.css
+++ b/css/styles.css
@@ -689,3 +689,17 @@ margin-bottom: 8px;
 .svg-fotter-social-media {
     fill: var(--p-footer-color);
 }
+
+.p-portfolio-image {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--p-footer-color);
+    padding: 40px 32px;
+    background-color: #4D5AE5;
+    height: 100%;
+    width: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
