--- a/css/styles.css
+++ b/css/styles.css
@@ -538,9 +538,14 @@ img {
 
 .portfolio-point {
     border-radius: 0px 0px 4px 4px;
-    flex: 1 0 360px;
     text-align: center;
     width: calc((100% - 48px) / 3);
+    transition: box-shadow 250ms;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-point:hover {
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .name {
@@ -691,6 +696,9 @@ margin-bottom: 8px;
 }
 
 .p-portfolio-image {
+    position: absolute;
+    top: 0;
+    left: 0;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -699,7 +707,8 @@ margin-bottom: 8px;
     background-color: #4D5AE5;
     height: 100%;
     width: 100%;
-    transform: translateY(100%);
+    transform: translateY(-100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+    position: relative;
+    overflow: hidden;
 }
