--- a/css/styles.css
+++ b/css/styles.css
@@ -540,8 +540,8 @@ img {
     border-radius: 0px 0px 4px 4px;
     text-align: center;
     width: calc((100% - 48px) / 3);
-    transition: box-shadow 250ms;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow 250ms  cubic-bezier(0.4, 0, 0.2, 1);
+   
 }
 
 .portfolio-point:hover {
@@ -625,7 +625,7 @@ margin-bottom: 8px;
     justify-content: center;
 }
 
-.social-media-link:focus:hover {
+.social-media-link:focus :hover {
     background-color: #404BBF;
 }
 
@@ -707,8 +707,14 @@ margin-bottom: 8px;
     background-color: #4D5AE5;
     height: 100%;
     width: 100%;
-    transform: translateY(-100%);
+    transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-point:hover .p-portfolio-image {
+    transform: translateY(0);
+}
+
+.portfolio-image {
     position: relative;
     overflow: hidden;
 }
