--- a/css/styles.css
+++ b/css/styles.css
@@ -623,9 +623,14 @@ margin-bottom: 8px;
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-media-link:focus :hover {
+.social-media-link:focus {
+    background-color: #404BBF;
+}
+
+.social-media-link:hover {
     background-color: #404BBF;
 }
 
