--- a/css/styles.css
+++ b/css/styles.css
@@ -690,13 +690,18 @@ margin-bottom: 8px;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
-.footer-reference:hover:active{
+.footer-reference:hover {
     background-color: #31d0aa;
 }
 
-.svg-fotter-social-media {
+.footer-reference:focus {
+    background-color: #31d0aa;
+}
+
+.svg-footer-social-media {
     fill: var(--p-footer-color);
 }
 
