--- a/css/styles.css
+++ b/css/styles.css
@@ -511,14 +511,13 @@ img {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--p-footer-color);
+    color: var(--contact-color);
     text-align: left;
     padding: 40px 32px;
     background-color: #4d5ae5;
     height: 100%;
     width: 100%;
-    transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 
 
 }
@@ -714,7 +713,6 @@ margin-bottom: 8px;
     letter-spacing: 0.02em;
     color: var(--p-footer-color);
     padding: 40px 32px;
-    background-color: #4D5AE5;
     height: 100%;
     width: 100%;
     transform: translateY(100%);
