--- a/css/styles.css
+++ b/css/styles.css
@@ -703,6 +703,7 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--p-footer-color);
+    background-color: var(--filter-button-color);
     padding: 40px 32px;
     height: 100%;
     width: 100%;
