--- a/css/styles.css
+++ b/css/styles.css
@@ -672,7 +672,7 @@ img {
 
 }
 
-.footer-reference {
+.footer-reference-link {
     width: 100%;
     height: 100%;
     background-color: var(--filter-button-color);
